syntax = "proto3";
option go_package = "currency/";
import "google/rpc/status.proto";

service Currency {
	rpc GetRate(RateRequest) returns (RateResponse);
	rpc Subscribe(stream RateRequest) returns (stream StreamingRateRequest);
}

message RateRequest {
	Currencies Base = 1;
	Currencies Destination = 2;
}

message RateResponse {
	Currencies Base = 1;
	Currencies Destination = 2;
	string Rate = 3;
}

enum Currencies {
	EUR=0;
	USD=1;
	JPY=2;
}

message StreamingRateRequest {
	oneof message {
		RateRequest rate_request = 1;
		google.rpc.Status error = 2;
	}
}
